newsApp/static/custom.css
body {
  padding-top: 1em;
  background-color: #e7e7e7
}

.navbar-header {
  background-color: #6b0000;
  padding-right: 1em;
}

.logo-img {
  padding-left: 4px;
  padding-right: 4px;
}

a.logo-text, a.logo-text:hover, a.logo-text:focus {
  font-family: 'Comic Sans MS', cursive, sans-serif;
  font-size: 32px;
  font-style: italic;
  color: white;
  text-decoration: none;
}

.body-content {
  padding: 40px 0 0 0;
  min-height: 50em;
}

.upper-control {
  margin-bottom: 0.5em;
  text-align: center;
}

.section-dropdown-button {
  margin-bottom: 0.5em;
  background-color: #6b0000;
  color: white;
}

.section-dropdown-button:hover, .section-dropdown-button:focus {
  background-color: #5a0000;
  color: white;
}

.section-dropdown-icon {
    height: 1.5em;
    width: 2em;
    margin-right: 2px;
}

@media only screen and (min-width: 480px) and (max-width: 767px) {
  .col-xsl-6 {
    width: 50%;
  }
}

#section-filters, #storyList, #storyDetail {
  max-width: 768px;
}

.storyPic {
  max-height: 12em;
}

.baseCard {
  background-color: white;
  border-top: 2px solid #6b0000;
  margin-bottom: 0.5em;
}

.baseCard .card-header {
  font-size: 1.1em;
  color: #6b0000;
  padding-bottom: 0.3em;
}

.baseCard .headline {
  color: black;
  font-size: 1.2em;
  font-weight: bold;
}

.baseCard .publisher-link {
  color: #171777;
}

.baseCard p {
  color: #171717;
}

.baseCard .card-actionRow {
    border-top: 2px solid #aaa;
    padding-top: 0.5em;
    margin-top: 0.5em;
}

.baseCard .card-action {
  font-size: 1.1em;
  color: #333;
  padding-left: 0.2em;
  border-left: 2px solid #aaa;
}

.baseCard .card-action:hover {
  color:#5a0000;
  text-decoration: none;
}

.baseCard .card-action span {
  padding-left: 4px;
  padding-right: 4px;
}

.storyCard {
  margin-bottom: 20px;
  box-shadow:         3px 3px 5px 6px #444;
  -webkit-box-shadow: 3px 3px 5px 6px #444;
  -moz-box-shadow:    3px 3px 5px 6px #444;
}

.articleCard {
  border: 2px solid #777;
}

.upper-nav-link {
  font-size: 1.2em;
  color: #6b0000;
}

.upper-nav-link:hover {
  color: #5b0000;
}

.cs-section {
  margin-top:4em;
}

.cs-item {
  margin-bottom:15px;
  padding-left:15px;
  padding-right:15px;
  border:2px solid #777;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  background-color:white;
}

.cs-item .cs-content {
  height:20em;
  overflow-y:auto;
  padding-left:15px;
  padding-right:15px;
}

.cs-item .cs-image-container {
  padding-top: 1em;
}

.cs-item .cs-title {
  color:black;
  font-weight: 600;
}

.cs-item .cs-image {
  max-height: 12em;
}

.cs-item .cs-publisher {
  color:#171717;
}

.cs-city-link, .cs-story-link {
  color: #6b0000;
}

.cs-city-link:hover, .cs-story-link:hover {
  color: #5b0000;
}

.cs-bottom {
  background-color:#f4f4f4;
  text-align: center;
}

.show-more-button {
  width: 50%;
  background-color: #6b0000;
  color: white;
}

.show-more-button:hover, .show-more-button:focus {
  background-color: #5a0000;
  color: white;
}

.footer {
  width: 100%;
  background-color: #222;
  margin-top: 5em;
}

.footer > .footer-container {
  padding: 15px;
  margin-right: auto;
  margin-left: auto;
}

.footer > .footer-container p {
  color: #aaa;
}

.footer .footer-link-container {
  min-width: 9em;
  padding-right: 5px;
  display: inline-block;
}

.footer .footer-link {
  color: #aaa;
  text-decoration: underline;
}

